[tool.poetry]
name = "account-transactions"
version = "0.1.0"
description = ""
authors = ["AnnaK <njutcka@yandex.ru>"]
readme = "README.md"
packages = [{include = "account_transactions"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
